--- a/curso-angular/src/app/components/first-component/first-component.component.html
+++ b/curso-angular/src/app/components/first-component/first-component.component.html
@@ -1,1 +1,8 @@
-<h2>Meu primeiro componente</h2>
+<h2 class="title">Nome: {{name}}</h2>
+<p>Idade: {{age}}</p>
+<p>Profissão: {{job}}</p>
+<p>Hobbies: {{hobbies[2]}}</p>
+<p>Nome do carro: {{car.name}} - {{car.years}}</p>
+<div>
+    <a href="#">Veja mais sobre o Daniel</a>
+</div>
