--- a/curso-angular/src/app/app.component.html
+++ b/curso-angular/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h2>Testando h2</h2>
 <p>Alguma coisa</p>
 <div>
-    <a href="#">Clique Aqui</a>
+  <a href="#">Clique Aqui</a>
 </div>
 <app-first-component></app-first-component>
 <app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
@@ -11,3 +11,5 @@
 <app-eventos></app-eventos>
 <app-emitter></app-emitter>
 <app-list-render></app-list-render>
+<app-pipes></app-pipes>
+<app-two-way-binding></app-two-way-binding>
