--- a/curso-angular/src/app/app.component.html
+++ b/curso-angular/src/app/app.component.html
@@ -1,5 +1,12 @@
+<p>header</p>
+<nav>
+  <a routerLink="/">Home</a>
+  <a routerLink="/list">Lista</a>
+</nav>
 <h1>Hello world Angular!</h1>
-<h2>Testando h2</h2>
+<router-outlet></router-outlet>
+<p>footer</p>
+<!-- <h2>Testando h2</h2>
 <p>Alguma coisa</p>
 <div>
   <a href="#">Clique Aqui</a>
@@ -12,4 +19,4 @@
 <app-emitter></app-emitter>
 <app-list-render></app-list-render>
 <app-pipes></app-pipes>
-<app-two-way-binding></app-two-way-binding>
+<app-two-way-binding></app-two-way-binding> -->
